--- a/package.json
+++ b/package.json
@@ -38,5 +38,7 @@
     "webpack-cli": "^3.2.3",
     "webpack-dev-server": "^3.1.14"
   },
-  "dependencies": {}
+  "dependencies": {
+    "dom-align": "^1.8.0"
+  }
 }
