--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "add-dom-event-listener": "^1.1.0",
     "dom-align": "^1.8.0"
   }
 }
