--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "add-dom-event-listener": "^1.1.0",
+    "classnames": "^2.2.6",
     "dom-align": "^1.8.0"
   }
 }
